sign up account ready

--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -41,6 +41,28 @@
       }
     }
 
+    &_mt54 {
+      &:not(:first-child) {
+        margin-top: 54px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(54, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(54, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(54, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(46, 375);
+        }
+      }
+    }
+
     &_mt70 {
       &:not(:first-child) {
         margin-top: 70px;
