--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -21,4 +21,5 @@ block content
           +nd-link(href="space-v3.html") Spacepool - Space (space-v3.html)
           +nd-link(href="nd-signup.html") Spacepool - Sign Up (nd-signup.html)
           +nd-link(href="nd-signup-confirm.html") Spacepool - Sign Up - Email Confirmed(nd-signup-confirm.html)
+          +nd-link(href="nd-signup-ready.html") Spacepool - Sign Up - Account created (nd-signup-ready.html)
           +nd-link(href="login.html") Spacepool - Log In (login.html)
