--- a/app/components/registration-form/registration-form.pug
+++ b/app/components/registration-form/registration-form.pug
@@ -396,3 +396,16 @@ mixin registration-form-summary(data)
         .registration-form__question Don’t have an account yet?
         +nd-button()(href="#")._pad10.registration-form__button Sign Up
     block
+
+mixin registration-form-accready()
+  +nd-form.registration-form&attributes(attributes)(data-validated-form)
+    +form-section-header()
+      +e.H2.title_wide Your account created and ready to use
+      +e.text Do not forget to add payment methods to your account
+    +form-section._mt54
+      +e.buttons
+        +nd-button('a').__button_wide(href="#") Add payment methods
+    .registration-form__bottom.registration-form__bottom_mt58
+      .registration-form__question You can also add payment methods later
+      +nd-button()(href="#")._pad10.registration-form__button.registration-form__button_mw110 Skip
+    block
