new search page

--- a/app/blocks/form-elements/nd-select.scss
+++ b/app/blocks/form-elements/nd-select.scss
@@ -342,16 +342,64 @@
     &::-webkit-scrollbar-track {
       width: 6px;
       background-color: $nd-color-bg;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(6, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(6, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(6, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(6, 375);
+      }
     }
 
     &::-webkit-scrollbar {
       width: 4px;
       background-color: $nd-color-bg;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(4, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(4, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(4, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(4, 375);
+      }
     }
 
     &::-webkit-scrollbar-thumb {
       width: 4px;
       background-color: $nd-color-basic;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(4, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(4, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(4, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(4, 375);
+      }
     }
 
     &--single {
