--- a/app/components/footer/nd-footer.scss
+++ b/app/components/footer/nd-footer.scss
@@ -26,7 +26,7 @@
   }
 
   @include screen('md', max, 2) {
-    padding: pxtovw(50, 960) 0 pxtovw(46, 960);
+    padding: pxtovw(50, 960) 0 pxtovw(106, 960);
     margin-top: pxtovw(88, 960);
   }
 
@@ -35,7 +35,7 @@
     margin-top: pxtovw(55, 375);
   }
 
-  .nd-offer-panel ~ & {
+  .nd-offer-panel ~ &, .nd-search-map-button ~ & {
     @include screen('md', max, 2) {
       padding-bottom: pxtovw(106, 960);
     }
@@ -44,6 +44,16 @@
       padding-bottom: pxtovw(163, 375);
     }
   }
+
+  // .nd-search-map-button ~ & {
+  //   @include screen('md', max, 2) {
+  //     padding-bottom: pxtovw(115, 960);
+  //   }
+
+  //   @include screen('sm', max, 2) {
+  //     padding-bottom: pxtovw(183, 375);
+  //   }
+  // }
 
   &__top {
     @include display-grid;
