--- a/app/components/results/results.pug
+++ b/app/components/results/results.pug
@@ -9,3 +9,11 @@ mixin results-full()
 mixin results-short()
   +e.short&attributes(attributes)
     block
+
+mixin nd-results()
+  +b.nd-results&attributes(attributes)
+    block
+
+mixin nd-results-item()
+  +e.item&attributes(attributes)
+    block
