--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -22,4 +22,5 @@ block content
           +nd-link(href="nd-signup.html") Spacepool - Sign Up (nd-signup.html)
           +nd-link(href="nd-signup-confirm.html") Spacepool - Sign Up - Email Confirmed(nd-signup-confirm.html)
           +nd-link(href="nd-signup-ready.html") Spacepool - Sign Up - Account created (nd-signup-ready.html)
-          +nd-link(href="login.html") Spacepool - Log In (login.html)
+          +nd-link(href="login.html") Spacepool - Login (login.html)
+          +nd-link(href="search.html") Spacepool - Search (search.html)
