--- a/app/styles/helpers/_basics.scss
+++ b/app/styles/helpers/_basics.scss
@@ -157,6 +157,7 @@ button {
   border-radius: 0; // Убираем авто-закругление углов на iOS
   background-color: transparent;
   font-family: $font-main;
+  -webkit-appearance: none;
 }
 
 hr {
