--- a/app/blocks/form-elements/nd-input.scss
+++ b/app/blocks/form-elements/nd-input.scss
@@ -9,7 +9,7 @@
   font-weight: 400;
   padding: 14px 11px 8px;
   transition: border $ease-main, box-shadow $ease-main;
-  box-shadow: inset 0 0 0 1px transparent;
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0);
   min-height: 50px;
 
   @include screen('xlg', max, 2) {
@@ -84,7 +84,7 @@
 
   &:hover {
     border-color: $nd-color-field-border-hover;
-    box-shadow: inset 0 0 0 1px transparent;
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0);
     border-radius: 3px;
 
     @include screen('xlg', max, 2) {
@@ -160,7 +160,7 @@
 
   .is-top & {
     border-color: $nd-color-basic;
-    box-shadow: inset 0 0 0 1px transparent;
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0);
     border-radius: 3px;
 
     @include screen('xlg', max, 2) {
