--- a/app/blocks/popups/nd-popup.scss
+++ b/app/blocks/popups/nd-popup.scss
@@ -44,6 +44,9 @@
     overflow: auto;
     box-sizing: border-box;
     padding: 60px 0;
+    scrollbar-color: $nd-color-basic $nd-color-bg;
+    scrollbar-width: thin;
+    -ms-overflow-style: none;
 
     @include screen('lg', max, 2) {
       padding: pxtovw(60, 1366) 0;
@@ -55,6 +58,69 @@
 
     @include screen('sm', max, 2) {
       padding: pxtovw(60, 375) 0;
+    }
+
+    &::-webkit-scrollbar-track {
+      width: 6px;
+      background-color: $nd-color-bg;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(6, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(6, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(6, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(6, 375);
+      }
+    }
+
+    &::-webkit-scrollbar {
+      width: 4px;
+      background-color: $nd-color-bg;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(4, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(4, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(4, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(4, 375);
+      }
+    }
+
+    &::-webkit-scrollbar-thumb {
+      width: 4px;
+      background-color: $nd-color-basic;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(4, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(4, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(4, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(4, 375);
+      }
     }
   }
 
